# ETABS-mcp

./: .gitignore  CSI API ETABS v1.chm  New Text Document.md  README.md  api_structure.json  debug_chm.py  etabs_mcp_config.json  extract_chm.cs  extract_chm.ps1  extract_chm.py  parse_hhc.py  pyproject.toml
src/etabs_mcp/: __init__.py  etabs_connection.py  helpers.py  server.py
src/etabs_mcp/tools/: __init__.py  analysis.py  assignments.py  database_tables.py  design.py  generic_api.py  loads.py  model_control.py  model_geometry.py  properties.py  results.py  seismic.py  selection.py  stiffness_modifiers.py  stories_grids.py
