[project]
name = "etabs-mcp"
version = "1.0.0"
description = "MCP server for CSI ETABS structural engineering software"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ETABS MCP" }]
keywords = ["mcp", "etabs", "csi", "structural-engineering", "fastmcp", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "comtypes>=1.4.0",
    "pydantic>=2.0.0",
]

[project.scripts]
etabs-mcp = "etabs_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mdvaleed7/ETABS-mcp"
Repository = "https://github.com/mdvaleed7/ETABS-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etabs_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"etabs_mcp_config.json" = "etabs_mcp/etabs_mcp_config.json"
